--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,13 +1,13 @@
 [control_plane]
-control1 ansible_host=IP_CHANGE_ME ansible_user=ubuntu
-control2 ansible_host=IP_CHANGE_ME ansible_user=ubuntu
-control3 ansible_host=IP_CHANGE_ME ansible_user=ubuntu
+control1 ansible_host=84.201.132.102 #ansible_user=fill
+control2 ansible_host=51.250.96.87 #ansible_user=fill
+control3 ansible_host=158.160.154.79 #ansible_user=fill
 
 [workers]
-worker1 ansible_host=IP_CHANGE_ME ansible_user=ubuntu
+worker1 ansible_host=158.160.185.105 #ansible_user=fill
 
 [lb]
-lb1 ansible_host=IP_CHANGE_ME ansible_user=ubuntu
+lb1 ansible_host=84.201.132.102 #ansible_user=fill
 
 [all:vars]
 host_key_checking=False
